fixed horizontal scrolling issue when opening interpretation

--- a/src/app/pages/dashboard/components/visualization-list/visualization-card/visualization-card.component.css
+++ b/src/app/pages/dashboard/components/visualization-list/visualization-card/visualization-card.component.css
@@ -101,3 +101,8 @@
   display: block;
   margin: auto;
 }
+
+.visualization-interpretation {
+  flex: 1;
+  overflow: hidden;
+}
